# stockgpt

./: .gitignore  README.md  main.py
backend/: .env  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: financial.py  market.py  news.py  report.py  risk.py  short_term.py  technical.py
backend/app/api/v1/routes/: analyze.py  short_term.py  stream.py
backend/app/core/: cache.py  config.py  logger.py  trace.py
backend/app/data/news/: sample.json
backend/app/graph/: nodes.py  state.py  test_run.py  workflow.py
backend/app/rag/: build_index.py  embedding.py  loader.py  retriever.py  splitter.py  vector_store.py
backend/app/schemas/: analyze.py  short_term.py
backend/app/services/: analyze_service.py  pool_service.py  report_service.py  short_term_service.py  stock_service.py  stream_service.py
backend/app/services/models/: stock.py
backend/app/services/repositories/: akshare_repo.py
backend/data/chroma/: chroma.sqlite3
backend/tests/: test_logger.py  test_rag.py
docs/: short-term-analysis-plan.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.vue  style.css
frontend/src/api/: stock.js
frontend/src/components/: KLine.vue  ShortTerm.vue  StockPool.vue  StockSearch.vue  StreamBox.vue
frontend/src/views/: Home.vue
