[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.64",
    "chromadb>=1.5.9",
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.6",
    "loguru>=0.7.3",
    "pandas>=3.0.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
]
